# 1S_Algoritmos_E_Programacao

./: CMakeLists.txt  E1
LE1-A3/: E_1.c  E_2.c  E_3.c  E_4.c  E_5.c  E_6.c  E_7.c  E_8.c
LE2-A5/: E_1.c  E_2.c  E_3.c  E_4.c  E_5.c  E_6.c  E_7.c
LE3-S2/: E_4_1.c  E_4_10.c  E_4_2.c  E_4_3.c  E_4_4.c  E_4_5.c  E_4_6.c  E_4_7.c  E_4_8.c  E_4_9.c
LE4-A789/: E_1.c  E_2.c  E_3.c  E_4.c
