cmake_minimum_required(VERSION 3.30)
project(1S_Algoritmos_E_Programacao C)

set(CMAKE_C_STANDARD 23)

add_executable(1S_Algoritmos_E_Programacao main.c
        LE1-A3/E_1.c
        LE1-A3/E_2.c
        LE1-A3/E_3.c
        LE1-A3/E_4.c
        LE1-A3/E_5.c
        LE1-A3/E_6.c
        LE1-A3/E_7.c)
